--- a/action.yml
+++ b/action.yml
@@ -1,12 +1,14 @@
 # action.yml
 name:'Custom Github Action'
-description:'GA takes inputs and returns outputs'
+description: 'A Github Action that takes an input and returns the square of the number'
 intputs:
    num:
+      description: 'Enter a number'
       required: true
       default: "1"
 ouputs:
    num_squared:
+     description: 'Square of the input'
      value: ${{ steps.get-square.outputs.num_squared }}
 runs:
   using: 'composite'
@@ -15,14 +17,14 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version:'3.10'
-    - name: Install dependencies
-      run: pip install -r requirement.txt
+    - name: Install Dependencies
+      run: pip install -r requirements.txt
       shell: bash
-    - name: Pass inputs to Shell
+    - name: Pass Inputs to Shell
       run: |
          echo "INPUT_NUM=${{ inputs.num }}" >> $GITHUB_ENV
       shell: bash
-    - name: Fetch the number' square
+    - name: Fetch the number's square
       id: get-square
       run: python src/get_num_square.py
       shell: bash
